Ignore case when searching for missing include files.

This way we can also offer the Qt camelcase includes.

BUG: 358506